Point CTA to hosted form

--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@
       <div class="cta-banner">
         <h3>【毎月5名様限定】無料個別相談 &amp; 戦略ロードマップ</h3>
         <p>孤独と後悔に終止符を打ち、誠実さを最強の武器に変える60分。迷いを手放し、自分だけの恋愛戦略を手に入れてください。</p>
-        <a class="btn-main" href="https://arkadia-japan.com/p/format_css?item_id=Q9JMsNXf&amp;format=div&amp;form_align=&amp;label_align=&amp;radio_float=&amp;checkbox_float=&amp;label_width=0&amp;input_width=0&amp;theme_name=3_7&amp;ver=3" target="_blank" rel="noopener">今すぐ申し込む</a>
+        <a class="btn-main" href="https://arkadia-japan.com/p/r/Q9JMsNXf" target="_blank" rel="noopener">今すぐ申し込む</a>
         <p style="margin-top:16px; font-size:13px; opacity:0.95; color:var(--white);">※定員に達し次第、予告なく募集を終了いたします</p>
       </div>
     </div>
@@ -1662,7 +1662,7 @@
           <span class="floating-footer__countdown-label">募集終了まで</span>
           <span class="floating-footer__countdown-time" id="countdown-timer">12:00:00</span>
         </div>
-        <a class="floating-footer__cta" href="https://arkadia-japan.com/p/format_css?item_id=Q9JMsNXf&amp;format=div&amp;form_align=&amp;label_align=&amp;radio_float=&amp;checkbox_float=&amp;label_width=0&amp;input_width=0&amp;theme_name=3_7&amp;ver=3" target="_blank" rel="noopener">無料相談に申し込む</a>
+        <a class="floating-footer__cta" href="https://arkadia-japan.com/p/r/Q9JMsNXf" target="_blank" rel="noopener">無料相談に申し込む</a>
       </div>
     </div>
   </div>
