--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       --subtext: #4d5273;
       --white: #ffffff;
       --max-width: 1080px;
+      --container-gutter: clamp(18px, 6vw, 48px);
     }
 
     @keyframes float-slow {
@@ -48,6 +49,7 @@
       background: linear-gradient(180deg, var(--ivory), var(--gray));
       scroll-behavior: smooth;
       padding-bottom: clamp(80px, 12vw, 120px);
+      overflow-x: hidden;
     }
 
     p, li {
@@ -74,7 +76,13 @@
     a { color: inherit; text-decoration: none; }
     h1, h2, h3, h4 { font-weight: 700; line-height: 1.4; }
 
-    .container { width: min(var(--max-width), 90vw); margin: 0 auto; }
+    .container {
+      width: 100%;
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 0 var(--container-gutter);
+      box-sizing: border-box;
+    }
 
     .hero {
       background: linear-gradient(180deg, rgba(6, 21, 57, 0.82), rgba(6, 21, 57, 1));
@@ -90,10 +98,13 @@
 
     .hero-inner {
       position: relative;
-      width: min(var(--max-width), 90vw);
+      width: 100%;
+      max-width: var(--max-width);
       margin: clamp(32px, 7vw, 72px) auto 0;
+      padding: 0 var(--container-gutter);
       display: flex;
       justify-content: center;
+      box-sizing: border-box;
     }
 
     .hero-panel {
@@ -774,13 +785,16 @@
     }
 
     .floating-footer__inner {
-      width: min(var(--max-width), 96vw);
+      width: 100%;
+      max-width: var(--max-width);
       margin: 0 auto;
+      padding: 0 var(--container-gutter);
       display: flex;
       align-items: center;
       justify-content: space-between;
       gap: clamp(18px, 4vw, 48px);
       flex-wrap: wrap;
+      box-sizing: border-box;
     }
 
     .floating-footer__message {
@@ -916,6 +930,7 @@
     @media (max-width: 900px) {
       .hero-inner { margin: clamp(24px, 6vw, 48px) auto 0; }
       .hero-panel { padding: clamp(32px, 6vw, 48px); }
+      :root { --container-gutter: clamp(16px, 5vw, 32px); }
     }
 
     @media (max-width: 640px) {
@@ -936,6 +951,11 @@
         font-size: 16px;
         box-shadow: 0 8px 18px rgba(12, 38, 96, 0.16);
       }
+      :root { --container-gutter: clamp(12px, 5vw, 24px); }
+    }
+
+    @media (max-width: 480px) {
+      :root { --container-gutter: clamp(10px, 4vw, 20px); }
     }
 
     @media (hover: hover) {
