Align copy with updated outline

--- a/index.html
+++ b/index.html
@@ -1030,8 +1030,8 @@
               <img alt="自然体で微笑むふたりのイメージ" loading="lazy" src="assets/images/card-authentic.jpg">
             </picture>
           </figure>
-          <h3>自然体の恋愛が日常になる</h3>
-          <p>作り込んだキャラを演じず、ありのままの自分で恋愛を楽しめます。素の言葉がそのまま相手の心に届く感覚を取り戻しましょう。</p>
+          <h3>自分を偽らず、自然体で恋愛がしたい</h3>
+          <p>無理にキャラを作らなくても、素のままのあなたが魅力として伝わる状態へ。肩の力を抜いて恋愛を楽しめる未来を描きます。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--weapon">
@@ -1040,8 +1040,8 @@
               <img alt="自分の魅力を象徴する光のイメージ" loading="lazy" src="assets/images/card-weapon.jpg">
             </picture>
           </figure>
-          <h3>ピュアな自分を丸ごと受け止めてもらえる</h3>
-          <p>飾らない純粋さを肯定され、弱さや繊細さを見せても愛される関係が手に入ります。</p>
+          <h3>純粋でピュアな本当の自分を受け入れてほしい</h3>
+          <p>抑えてきた感情や繊細さを隠さずに、ありのまま愛してくれる女性と出会い、安心して想いを伝えられる関係を手に入れます。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--graduate">
@@ -1050,8 +1050,8 @@
               <img alt="本命女性と向き合うイメージ" loading="lazy" src="assets/images/card-graduate.jpg">
             </picture>
           </figure>
-          <h3>本気で惚れた女性と付き合える</h3>
-          <p>失うのが怖いと感じるほど惹かれた女性と対等に向き合い、告白まで迷わず進める自信が宿ります。</p>
+          <h3>失うのが怖いくらい好きになった女性と付き合いたい</h3>
+          <p>いつかは…と見送ってきた本命女性に、堂々と想いを伝えられる戦略と自信を備え、真剣な恋が実る瞬間を迎えます。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--confidence">
@@ -1060,8 +1060,8 @@
               <img alt="深い信頼で結ばれたふたりのイメージ" loading="lazy" src="assets/images/card-confidence.jpg">
             </picture>
           </figure>
-          <h3>心の深部でつながる長期的な関係</h3>
-          <p>表面的なやり取りで終わらず、価値観が共鳴するパートナーと長期的な絆を育てられます。</p>
+          <h3>付き合った女性と心の奥で深く繋がり長期的な関係を築きたい</h3>
+          <p>表面的な関係で終わらず、お互いの価値観と未来を共有できる長期的なパートナーシップを構築します。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--time">
@@ -1070,8 +1070,8 @@
               <img alt="笑顔でデートを楽しむイメージ" loading="lazy" src="assets/images/card-time.jpg">
             </picture>
           </figure>
-          <h3>デートが心から楽しくなる</h3>
-          <p>暗記したフレーズに頼る苦行は終わり。ふたりで過ごす時間そのものが幸せに感じられるようになります。</p>
+          <h3>苦行のようなデートはやめて心の底からデートを楽しみたい</h3>
+          <p>暗記した会話やテンション作りに頼らず、会いたい人と心から笑い合えるデートが当たり前になります。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--weapon">
@@ -1080,8 +1080,8 @@
               <img alt="力強く輝くコンパスのイメージ" loading="lazy" src="assets/images/card-weapon.jpg">
             </picture>
           </figure>
-          <h3>価値観を誇りを持って語れる</h3>
-          <p>自分の信念が整理され、堂々と価値観を伝えられるように。相手から尊敬される軸が備わります。</p>
+          <h3>自分の価値観に誇りを持って堂々と伝えられるようになりたい</h3>
+          <p>「自分なんて…」と卑下してきた価値観を整え、胸を張って語れる芯の強さを育てます。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--authentic">
@@ -1090,8 +1090,8 @@
               <img alt="生涯のパートナーシップを象徴するイメージ" loading="lazy" src="assets/images/card-authentic.jpg">
             </picture>
           </figure>
-          <h3>生涯寄り添うパートナーと出会える</h3>
-          <p>最期に涙してくれる唯一の女性と、深い信頼と愛情で結ばれたパートナーシップを築けます。</p>
+          <h3>死ぬ前に悲しんでくれる一生涯のパートナーがほしい</h3>
+          <p>最期まで支え合えるたった一人の女性と出会い、互いを深く信頼できる生涯のパートナーシップを育みます。</p>
         </div>
       </div>
     </div>
@@ -1103,20 +1103,20 @@
         <h2>それでも現実は、まだ理想と遠い。</h2>
       </div>
       <div class="lead-paragraphs">
-        <p>理想はわかっているのに、恋愛の現場で自然体の自分を出すのは怖いまま。ふと気づけば心のどこかで“本当の自分を見せたら嫌われる”とブレーキを踏んでいます。</p>
+        <p>でも現実は――理想通りに進まない。心のどこかで「本当の自分を見せたら嫌われるかも」と感じ、ブレーキを踏んでしまう瞬間が続いていませんか。</p>
       </div>
       <ul class="bullet-list">
-        <li>本音を隠し、相手に合わせたキャラを演じている自分に違和感が募る。</li>
-        <li>純粋な想いを伝えたら拒絶されるのではと恐れ、気持ちを抑え込んでしまう。</li>
-        <li>心から大切にしたい女性と出会えていない、または長く続けられていない。</li>
-        <li>付き合えても表面的な関係のまま終わり、深い絆を築く前に別れてしまう。</li>
-        <li>会話術やフレーズを暗記して臨む“修行のようなデート”に疲弊している。</li>
-        <li>自分の価値観を言語化できず、「自分なんて…」と卑下する癖が抜けない。</li>
+        <li>自分を偽って演じ続けることに違和感を覚えている。</li>
+        <li>本当の自分を出したら嫌われると思い、想いを抑え込んでしまう。</li>
+        <li>失うのが怖いくらい好きになれる女性と、長らく出会えていない。</li>
+        <li>付き合えても表面的な関係のまま終わり、長続きしない。</li>
+        <li>会話術やフレーズの暗記に頼った“修行のようなデート”に疲れている。</li>
+        <li>自分の価値観がわからず、「自分なんて…」と卑下する癖が抜けない。</li>
         <li>このまま一生孤独なのではと、不安を抱えたまま夜を迎えてしまう。</li>
       </ul>
       <div class="lead-paragraphs">
-        <p>だからYouTubeや教材で学び、マッチングアプリや結婚相談所、美容室や脱毛にも投資してきた。努力を重ねているのに成果がつながらないのは、あなたのせいではありません。</p>
-        <p><strong>もしかしたら、その努力が逆効果になっている可能性すらある。</strong>次は何を信じればいいのか分からない——そんな行き詰まりを感じているのなら、この先を読み進めてください。</p>
+        <p>YouTubeや教材で学び、マッチングアプリや結婚相談所、美容室や脱毛にも投資してきた。それでも成果につながらないのは、あなたの努力が足りないからではありません。</p>
+        <p><strong>むしろ、その努力が逆効果になっている可能性すらある。</strong>次に何を信じればいいかわからなくなったなら、この先の話を聞いてください。</p>
       </div>
     </div>
   </section>
@@ -1127,9 +1127,9 @@
         <h2>「モテる男」を追いかけるほど魅力がかき消される理由</h2>
       </div>
       <div class="lead-paragraphs">
-        <p>世の中の恋愛ノウハウは、華やかで外向的な男性を基準に設計されています。そこで提示される“モテる男”像を目指すほど、あなたは本来の価値観を封じ込めることになる。</p>
-        <p>テンプレ化された振る舞いを身につける→自分の感情を押し殺す→強みや価値観が曖昧になる→オリジナリティが失われる。結果として、女性からは「どこかで見たことがある人」だと思われてしまうのです。</p>
-        <p>今、女性が求めているのは量産型のモテ男ではなく、“この人じゃなきゃダメ”と言い切れる希少性。あなたが磨くべきはキャラ作りではなく、誠実さや価値観を軸にした唯一無二の存在感です。</p>
+        <p>あなたが成果につながらない一番の原因は、<strong>「モテる男」になることを目指してしまったから</strong>。巷のノウハウに沿うほど、本当の自分を隠すことになり、違和感だけが増していきます。</p>
+        <p><strong>本当の自分を隠す</strong> → <strong>価値観や強みがわからなくなる</strong> → <strong>あなたのオリジナリティがなくなる</strong> → <strong>魅力が消えていく</strong>。この連鎖が続けば、女性からは「どこにでもいる人」にしか映りません。</p>
+        <p>恋愛講師によって“理想のモテ男”がテンプレ化された今、女性は量産型の男性にうんざりしています。求められているのは「この人じゃなきゃダメ」と思わせる希少性。つまりあなた自身の誠実さや価値観を磨くことこそ、最短の攻略法なのです。</p>
       </div>
     </div>
   </section>
@@ -1148,7 +1148,7 @@
             </picture>
           </figure>
           <h3>独自の魅力を構築する</h3>
-          <p>内面・外見・背景ストーリーまでを深掘りし、「あなたが自然体でいること」こそ最大の魅力だと伝わるブランドを作り込みます。</p>
+          <p>内面・外見・背景までを丁寧に整理し、誠実さや価値観を言語化。自然体のまま惹きつける“唯一無二の魅力”を設計します。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--weapon">
@@ -1158,7 +1158,7 @@
             </picture>
           </figure>
           <h3>強みが活きる出会い方を選ぶ</h3>
-          <p>3C分析を使って「どこで誰と出会うか」を再設計。あなたの価値観が響く場で、本命女性に出会える戦略を描きます。</p>
+          <p>3C（あなた・相手・場）の視点で出会い方を再構築。あなたの強みが活きるフィールドで、本命の女性と自然に巡り合う導線を整えます。</p>
         </div>
         <div class="card">
           <figure class="card-visual card-visual--confidence">
@@ -1168,7 +1168,7 @@
             </picture>
           </figure>
           <h3>深層心理コミュニケーション</h3>
-          <p>相手の心の奥にある欲求を丁寧に引き出し、安心感と信頼を育てながら長期的な関係へと育む会話術を身につけます。</p>
+          <p>深層心理コミュニケーションで、相手の本音を丁寧に受け止める。安心感と信頼を育てながら、長期的な関係へとつなげる会話と振る舞いを習得します。</p>
         </div>
       </div>
     </div>
@@ -1182,15 +1182,15 @@
       <div class="timeline">
         <div class="timeline-step">
           <h4>1. やるべきことが人によって違う</h4>
-          <p>目的地と現在地が異なれば、進むべき道も全く変わります。理想の彼女像・関係性・期限、そして年齢や恋愛経験まで整理しないまま動くと、努力が的外れになります。</p>
+          <p>目的地（どんな女性と、どんな関係を、いつまでに）と現在地（年齢・住む場所・恋愛経験）が人によって違うから、取るべき戦略もまったく変わります。ここが曖昧なまま動くと、努力はズレた方向へ進んでしまいます。</p>
         </div>
         <div class="timeline-step">
           <h4>2. フィードバックする人がいない</h4>
-          <p>失敗が放置されると、同じつまずきを何度も繰り返すだけ。近くにプロの視点がなければ、修正点が分からず時間だけが過ぎてしまいます。</p>
+          <p>失敗が放置されれば、自己流のまま同じ壁にぶつかります。細かくフィードバックしてくれる人がおらず、いても素人レベルでは軌道修正ができません。</p>
         </div>
         <div class="timeline-step">
           <h4>3. メンタルが削られて挫折する</h4>
-          <p>恋愛の失敗は人格否定に近い痛みを伴います。強制力もなく、非モテ仲間ばかりの環境だと、先送りの沼から抜けられません。</p>
+          <p>恋愛の失敗は人格を否定されたかのような痛みを伴います。強制力のない環境で、周りも非モテばかりなら、ダメージから立ち直れず先送りするのは当然です。</p>
         </div>
       </div>
     </div>
@@ -1242,9 +1242,9 @@
         <h2>間違った環境では、努力が逆効果になる</h2>
       </div>
       <div class="lead-paragraphs">
-        <p>「どこでもいい」は大きな誤解です。あなたに合わない戦略・フィードバック・環境を選べば、むしろ自信を失うスピードが早まります。</p>
-        <p>恋愛ノウハウの多くは、陽キャで外向的な人の成功体験をベースに作られています。彼らは自分がうまくいった方法だけを語り、内向的で誠実な男性が直面する壁には気づきません。</p>
-        <p>恋愛系YouTuberの華やかな情報を追いかけても、あなたの現実が変わらないのはそのため。賢いあなたなら、この矛盾にもう気づいているはずです。</p>
+        <p>「どこで学んでも同じだろう」は大きな勘違い。あなたに合わない戦略・フィードバック・環境を選べば、成果どころか自信を失うスピードが早まります。</p>
+        <p>今世に出回っている恋愛ノウハウのほとんどは、陽キャで外向的な人がうまくいった方法をそのまま語ったもの。内向的で誠実な男性が抱える壁には目が向けられていません。</p>
+        <p>恋愛系YouTuberの派手な手法を追っても変わらないのはそのため。賢いあなたならすでに気づいているはずです。</p>
       </div>
     </div>
   </section>
@@ -1524,6 +1524,7 @@
         <h2>恋愛に優先順位を置くべき理由</h2>
       </div>
       <div class="lead-paragraphs">
+        <p>恋愛は「行動の教育」です。後回しにしがちなテーマこそ先に整えることで、人生の土台が劇的に安定します。</p>
         <p>恋愛は人生の中でもっとも優先順位の高いテーマです。パートナーシップが整えば、仕事も人間関係も驚くほどスムーズに回り始めます。</p>
         <p>恋愛には賞味期限があります。今感じているトキメキも出会える可能性も、時間が経つほど薄れていく。先送りにするほど選択肢は狭まってしまいます。</p>
         <p>お金を稼ぐには膨大な集中力が必要ですが、恋愛の悩みを抱えたままだと集中できません。逆に、お金だけを先に手にしても恋愛で失う危険があるし、「愛なのかお金なのか」疑心暗鬼な関係になりかねません。著名投資家の青汁王子も同じことを語っています。</p>
