Refine cause section copy and pillar assets

--- a/index.html
+++ b/index.html
@@ -1137,11 +1137,11 @@
   <section class="section light" id="cause">
     <div class="container">
       <div class="section-title">
-        <h2>「モテる男」になろうとすればするほど、あなたの魅力がかき消されていく残酷な理由</h2>
+        <h2>「モテる男」になろうとすればするほど、<br>あなたの魅力が消されてしまう残酷な理由</h2>
       </div>
       <div class="lead-paragraphs">
-        <p>あなたが成果につながらない一番の原因は、<strong>「モテる男」になることを目指してしまったから</strong>。<br>モテる男を目指すということは、モテる男を擬態することになり、<strong>あなたの本当の姿を隠すことになります。</strong><br>その結果、あなたには違和感だけが増していきます。</p>
-        <p>そして、<strong>本当の自分を隠す</strong> → <strong>価値観や強みがわからなくなる</strong> → <strong>あなたのオリジナリティがなくなる</strong> → <strong>魅力が消えていく</strong>。<br>という負のループに陥ることになります。<br>その結果、モテる男の劣化版になってしまうんです。</p>
+        <p>あなたの努力が成果につながらない一番の原因。それは、<strong>「モテる男」になることを目指している</strong>からです。<br>モテる男を目指すということは、モテる男を擬態することになり、<strong>あなたの本当の姿を隠すことになります。</strong></p>
+        <p>その結果、<strong>本当の自分を隠す</strong> → <strong>価値観や強みがわからなくなる</strong> → <strong>あなたのオリジナリティがなくなる</strong> → <strong>魅力が消えていく</strong>。<br>という負のループに陥ることになります。<br>その結果、<strong>モテる男の劣化版</strong>になってしまうんです。</p>
         <p>さらに、そういった巷の恋愛ノウハウによって“モテる男”になることがテンプレ化された今、女性は自己中心的な男性にうんざりしているんです。<br>女性が求められているのは<strong> 「この人じゃなきゃダメ」と思わせる独自の魅力を持つ男</strong>です。<br>つまり、あなた自身の価値観や強みを言語化して、女性にとって<strong> 唯一無二の魅力を持つ男になることこそ、あなたに最適な方法なんです。</strong></p>
       </div>
     </div>
